--- a/scss/components/card.scss
+++ b/scss/components/card.scss
@@ -3,22 +3,27 @@
 }
 
 .card {
-    display: block;
-    margin: 200px auto;
+     margin: 0px 180px 0px 280px;
     border-radius: 10px;
 }
 
 .single {
     background-color: white;
+    display: block;
+    margin: 200px auto 0px;
+    width: 50%;
+    border-radius: 10px;
+        
 }
 
 .information {
     background-color: $cyan;
-    display: flex;
+    max-width: 50%;
 }
 
 .why-us {
-    background-color: $green;
-    display: flex;
+    background-color: $green;   
+    max-width: 50%;
+
 
 }
