--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,5 @@
 @import "./base/global.scss";
 @import "./base/grid.scss";
 @import "./base/colors.scss";
+@import "./base/text.scss";
 @import "./components/card.scss";
-
