--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -428,6 +428,7 @@ a:active {
       align-items: center;
       background-color: #c0df34;
       border-radius: 4px;
+      box-shadow: 5px 17px 39px darkslategrey;
       color: #e5eff5;
       display: flex;
       font-size: 16px;
@@ -444,5 +445,11 @@ a:active {
     width: 100%; }
     .card .why-us .txt {
       font-size: 13px;
-      padding-right: 60px;
-      line-height: 20px; }
+      line-height: 20px;
+      padding-right: 60px; }
+
+@media (max-width: 1064) {
+  .information {
+    max-width: 100%;
+    width: 100%;
+    text-align: center; } }
