--- a/scss/components/card.scss
+++ b/scss/components/card.scss
@@ -11,29 +11,26 @@
     padding: 28px 64px;
     width: 50%;
 
-
     .join {
         color: $cyan;
         font-weight: 700;
         line-height: 30px;
         margin-bottom: 16px;
         letter-spacing: normal;
-        
     }
-    
+
     .day {
         color: $yellow;
         font-weight: 700;
         margin-bottom: 16px;
     }
-    
+
     .text {
         font-size: 16px;
         line-height: 26px;
         max-width: 94%;
         padding-bottom: 22px;
         color: $blue;
-        
     }
 }
 
@@ -42,16 +39,18 @@
 .card {
     margin: 0 auto;
     max-width: 50%;
-    
-    
-    
+
     .information {
         background-color: #2bb3b1;
         border-radius: 0 0 0 8px;
         padding: 30px 56px 26px;
         max-width: 50%;
         width: 100%;
-        
+
+        @media (max-width: 1064px) {
+            max-width: 100%;
+            text-align: center;
+        }
 
         .text {
             color: $grey;
@@ -64,15 +63,12 @@
                 letter-spacing: 1px;
             }
         }
-    
-
-
 
         .btn {
             align-items: center;
             background-color: $yellow;
             border-radius: 4px;
-            box-shadow: 5px 17px 39px darkslategrey;
+            box-shadow: rgba(0, 0, 0, 0.1);
             color: $grey;
             display: flex;
             font-size: 16px;
@@ -80,12 +76,10 @@
             justify-content: center;
             line-height: 26px;
             text-align: center;
-            width: 206px;
-
+            max-width: 206px;
         }
     }
 
-    
     .why-us {
         background-color: #4abebd;
         border-radius: 0 0 8px 0;
@@ -93,23 +87,19 @@
         padding: 30px 50px;
         width: 100%;
 
+        @media (max-width: 1064px) {
+            max-width: 100%;
+            text-align: center;
+
+            .txt {
+                margin: 0 auto;
+            }
+        }
+
         .txt {
             font-size: 13px;
             line-height: 20px;
-            padding-right: 60px;
+            max-width: 200px;
         }
-        
-
     }
 }
-
-
-@media (max-width: 1064) {
-    .information {
-        max-width: 100%;
-        width: 100%;
-        text-align: center;
-    }
-}
-
-
